--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
         "react-leaflet": "^4.2.1",
+        "react-leaflet-draw": "^0.20.4",
         "react-router-dom": "^6.20.1"
     },
     "prettier": {
