--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@emotion/styled": "^11.11.0",
         "framer-motion": "^10.16.15",
         "leaflet": "^1.9.4",
+        "leaflet-geometryutil": "^0.10.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
